# bitcoin-inscription-scanner

./: .gitignore  Cargo.toml  README.md  config.sample.toml  config.toml
src/: main.rs
src/cache/: bloom.rs  db.rs  mod.rs
src/config/: mod.rs  settings.rs
src/node/: client.rs  error.rs  mod.rs
src/parser/: inscription.rs  mod.rs  parallel.rs
src/storage/: image.rs  mod.rs  text.rs
src/utils/: metrics.rs
