[package]
name = "bitcoin-inscription-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Bitcoin inscription scanner"
license = "MIT"

[dependencies]
bitcoin = { version = "0.30.2", features = ["serde"] }
bitcoincore-rpc = "0.17"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
rocksdb = "0.21"
bloom = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
blake3 = "1.3"
bincode = "1.3"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
toml = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.3"